--- a/composer.json
+++ b/composer.json
@@ -39,11 +39,27 @@
     "composer/installers": "~1.0",
     "illuminate/support": "~5.6",
     "roots/sage-lib": "~9.0.2",
-    "soberwp/controller": "~2.1.0"
+    "soberwp/controller": "~2.1.0",
+    "wpackagist-plugin/timber-library": "^1.8"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
-    "roots/sage-installer": "~1.3"
+    "roots/sage-installer": "~1.3",
+    "wpackagist-plugin/debug-bar": "1.0",
+    "wpackagist-plugin/debug-bar-timber": "^0.3.0",
+    "hellonico/timber-dump-extension": "^0.1.1"
+  },
+    "extra": {
+    "installer-paths": {
+      "web/app/mu-plugins/{$name}/": [
+        "type:wordpress-muplugin",
+        "wpackagist-plugin/debug-bar",
+        "wpackagist-plugin/debug-bar-timber",
+        "hellonico/timber-dump-extension",
+        "wpackagist-plugin/timber-library"
+        ]
+    },
+    "wordpress-install-dir": "web/wp"
   },
   "scripts": {
     "test": ["phpcs"],
