--- a/composer.json
+++ b/composer.json
@@ -40,10 +40,10 @@
     "illuminate/support": "~5.6",
     "roots/sage-lib": "~9.0.2",
     "soberwp/controller": "~2.1.0",
-    "wpackagist-plugin/timber-library": "^1.8"
+    "wpackagist-plugin/timber-library": "^1.8",
+    "wpackagist-plugin/gutenberg": "^4.7"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^2.8.0",
     "roots/sage-installer": "~1.3",
     "wpackagist-plugin/debug-bar": "1.0",
     "wpackagist-plugin/debug-bar-timber": "^0.3.0",
@@ -52,6 +52,7 @@
     "extra": {
     "installer-paths": {
       "web/app/mu-plugins/{$name}/": [
+        "wpackagist-plugin/gutenberg",
         "type:wordpress-muplugin",
         "wpackagist-plugin/debug-bar",
         "wpackagist-plugin/debug-bar-timber",
