--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,12 @@
       "App\\": "app/"
     }
   },
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://wpackagist.org"
+    }
+  ],
   "require": {
     "php": ">=7.1",
     "composer/installers": "~1.0",
